--- a/app/views/tweets.xml
+++ b/app/views/tweets.xml
@@ -1,7 +1,9 @@
 <Alloy>
 	<Tab id="tweetsTab" title="Twitter">
-		<Window id="tweetsWindow" class="topBar" title="Tweets">
-			
+		<Window id="tweetsWindow" class="topBar" title="Tweets" onOpen="doOpen">
+			<TitleControl platform="ios">
+				<Label class="titolo">The John Main Seminar 2015</Label>
+			</TitleControl>
 			<TableView id="tweetsTable"></TableView>
 
 		</Window>
