--- a/app/views/location.xml
+++ b/app/views/location.xml
@@ -1,6 +1,9 @@
 <Alloy>
 	<Tab id="locationTab" title="Location">
-		<Window id="locationWindow" class="topBar" title="Location">
+		<Window id="locationWindow" class="topBar" title="Location" onOpen="doOpen">
+			<TitleControl platform="ios">
+				<Label class="titolo">The John Main Seminar 2015</Label>
+			</TitleControl>
 			<Module id="mapview" module="ti.map" onComplete="selectAnnot" method="createView">
 				<!-- Starting with Alloy 1.4.0, use the Annotation tag to define an annotation -->
 				<!-- Prior to Alloy 1.4.0, create annotations in the controller -->
