--- a/app/views/schedule.xml
+++ b/app/views/schedule.xml
@@ -1,7 +1,9 @@
 <Alloy>
 	<Tab id="scheduleTab" title="Schedule">
-		<Window id="scheduleWindow" class="topBar" title="Schedule">
-			
+		<Window id="scheduleWindow" class="topBar" title="Schedule" onOpen="doOpen">
+			<TitleControl platform="ios">
+				<Label class="titolo">The John Main Seminar 2015</Label>
+			</TitleControl>
 		</Window>
 	</Tab>
 </Alloy>
