--- a/app/views/schedule.xml
+++ b/app/views/schedule.xml
@@ -7,6 +7,19 @@
 			<LeftNavButton platform="ios">
 				<ImageView class="leftNavImg"/>
 			</LeftNavButton>
+			
+			<TableView id="scheduleTable"/>
+			
+			<View class="controlsbar">
+				<View class="separator"/>
+				<View class="button" id="first" onClick="loadRetreat">
+					<Label class="buttonText" id="retreat">RETREAT</Label>
+				</View>
+				<View class="button" id="last" onClick="loadSeminar">
+					<Label class="buttonText" id="seminar">SEMINAR</Label>
+				</View>
+			</View>
+			
 		</Window>
 	</Tab>
 </Alloy>
